feat: bookings
